[package]
name = "aigc-vote-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
http = "1.3"
tower = { version = "0.5", features = ["util"] }
